# vehicles4ukraine

./: .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  MODELS.md  config.yaml  db.py  docker-compose.yml  pyproject.toml  search.py  web.py
todo/tasks/: task-001-scraper-scaffold-project-setup-and-vehicle-model.md  task-002-database-frontend-sqlite-schema-and-db-layer.md  task-003-scraper-scaffold-base-scraper-interface.md  task-004a-scraper-scaffold-gaspedaal-research-spike.md  task-004b-scraper-scaffold-gaspedaal-scraper-implementation.md  task-006-scraper-scaffold-filters-and-pipeline.md  task-007-scraper-scaffold-cli-entry-point.md  task-008-database-frontend-log-notifier.md  task-template.md
